; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_syscalls.c_sys_rename.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_vfs_syscalls.c_sys_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.rename_args = type { i32, i32 }

@AT_FDCWD = common dso_local global i32 0, align 4
@UIO_USERSPACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_rename(%struct.thread* %0, %struct.rename_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.rename_args*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.rename_args* %1, %struct.rename_args** %4, align 8
  %5 = load %struct.thread*, %struct.thread** %3, align 8
  %6 = load i32, i32* @AT_FDCWD, align 4
  %7 = load %struct.rename_args*, %struct.rename_args** %4, align 8
  %8 = getelementptr inbounds %struct.rename_args, %struct.rename_args* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @AT_FDCWD, align 4
  %11 = load %struct.rename_args*, %struct.rename_args** %4, align 8
  %12 = getelementptr inbounds %struct.rename_args, %struct.rename_args* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @UIO_USERSPACE, align 4
  %15 = call i32 @kern_renameat(%struct.thread* %5, i32 %6, i32 %9, i32 %10, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @kern_renameat(%struct.thread*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
